--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,3 +178,30 @@ footer {
 footer a {
     color: fuchsia;
 }
+
+/* versione mobile fino a 575px */
+
+@media screen and (max-width: 575px) {
+
+    body {
+        line-height: 2.5rem;
+    }
+
+    header li {
+        display: inline-block;
+        padding: 0.5em;
+    }
+
+    h1 {
+        font-size: 4rem;
+        line-height: 1em;
+    }
+
+    #logoHTML {
+        border: solid 4px #01a0c6;
+        outline: solid 4px #a12572;
+        width: 60px;
+    }
+
+
+}
